WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87992
[BlackBerry] Crash in InputHandler - uninit variable
https://bugs.webkit.org/show_bug.cgi?id=87992
Summary
[BlackBerry] Crash in InputHandler - uninit variable
George Staikos
Reported
2012-05-31 11:06:57 PDT
#0 WebCore::SelectPopupClient::update (this=0x2b64696c, multiple=false, size=14, labels=..., enableds=0x1503398, itemType=0x1158680, selecteds=0x1503338, element=0x151d2c0) #1 0x791a1c3e in BlackBerry::WebKit::InputHandler::openSelectPopup ( this=0xf57050, select=0x151d2c0) The select popup client is not initialized. Crashes the tests among others.
Attachments
Patch to fix the crash
(1.45 KB, patch)
2012-05-31 11:18 PDT
,
George Staikos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
George Staikos
Comment 1
2012-05-31 11:18:23 PDT
Created
attachment 145119
[details]
Patch to fix the crash
Rob Buis
Comment 2
2012-05-31 11:21:57 PDT
Comment on
attachment 145119
[details]
Patch to fix the crash LGTM.
WebKit Review Bot
Comment 3
2012-05-31 12:30:52 PDT
Comment on
attachment 145119
[details]
Patch to fix the crash Clearing flags on attachment: 145119 Committed
r119134
: <
http://trac.webkit.org/changeset/119134
>
WebKit Review Bot
Comment 4
2012-05-31 12:30:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug