[Blackberry] Initialize the select client and delete the pointer in the destructor so it doesn't leak.  Fixes test crashes. https://bugs.webkit.org/show_bug.cgi?id=87992

Reviewed by Rob Buis.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::InputHandler):
(BlackBerry::WebKit::InputHandler::~InputHandler):


Canonical link: https://commits.webkit.org/105830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119134 268f45cc-cd09-0410-ab3c-d52691b4dbfc